PlasmaClient: update to 244, remove notes, add username/password interface in wrapper script
git-svn-id: https://svn.macports.org/repository/macports/trunk@72005 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/files/PlasmaClient.in
+++ b/dports/games/PlasmaClient/files/PlasmaClient.in
@@ -1,34 +1,57 @@
 #!/bin/sh
 # $Id$
 
-usage() {
-    osascript \
-        -e 'tell app "Finder"' \
-        -e 'activate' \
-        -e 'display dialog (do shell script "@PREFIX@/bin/port -q notes PlasmaClient") buttons "OK" default button 1 with title "PlasmaClient" with icon note' \
-        -e 'end'
-    exit 1
-}
+if [ -z "$PREFIX" ]; then
+    PREFIX="@PREFIX@"
+fi
 
-PLIST=org.macports.PlasmaClient
+LOGDIR="${PREFIX}/var/log/PlasmaClient"
+LOGFILE="PlasmaClient.$(date '+%s').log"
+LOGLINK="PlasmaClient.log"
+PLIST="org.macports.PlasmaClient"
 
 USERNAME="$(defaults read $PLIST username)"
 PASSWORD="$(defaults read $PLIST password)"
-
-if [ -z "$USERNAME" -o -z "$PASSWORD" ]; then
-    usage
+LASTLOGINFAILED=0
+if [ -r "${LOGDIR}/${LOGLINK}" ]; then
+    if [ -n "$(grep '^Login failed:' ${LOGDIR}/${LOGLINK})" ]; then
+        LASTLOGINFAILED=1
+    fi
 fi
 
-LOGDIR="@PREFIX@/var/log/PlasmaClient"
+
+if [ -z "${USERNAME}" -o -z "${PASSWORD}" -o ${LASTLOGINFAILED} -eq 1 ]; then
+    USERNAME="$(osascript \
+        -e 'tell app "Finder"' \
+        -e 'activate' \
+        -e "display dialog \"PlasmaClient needs to know your Myst Online: URU Live again account name (email address). (If you enter this incorrectly, PlasmaClient will hang during startup.)\" default answer \"${USERNAME}\" buttons {\"Cancel\", \"OK\"} default button \"OK\" with title \"PlasmaClient\" with icon note" \
+        -e 'return text returned of the result' \
+        -e 'end')" || exit
+    if [ -z "${USERNAME}" ]; then
+        exit
+    fi
+    
+    PASSWORD="$(osascript \
+        -e 'tell app "Finder"' \
+        -e 'activate' \
+        -e "display dialog \"PlasmaClient needs to know your Myst Online: URU Live again password. (If you enter this incorrectly, PlasmaClient will hang during startup.)\" default answer \"${PASSWORD}\" with hidden answer buttons {\"Cancel\", \"OK\"} default button \"OK\" with title \"PlasmaClient\" with icon note" \
+        -e 'return text returned of the result' \
+        -e 'end')" || exit
+    if [ -z "${PASSWORD}" ]; then
+        exit
+    fi
+    
+    defaults write $PLIST username "$USERNAME"
+    defaults write $PLIST password "$PASSWORD"
+fi
+
 KEEPLOGS=10
 cd "${LOGDIR}"
 ls PlasmaClient.*.log 2>/dev/null | sort -n -r | sed "1,$((${KEEPLOGS} - 1))d" | xargs rm -f
 
-LOGFILE="PlasmaClient.$(date '+%s').log"
-LOGLINK="PlasmaClient.log"
 rm -f "${LOGDIR}/${LOGLINK}"
 ln -s "${LOGFILE}" "${LOGDIR}/${LOGLINK}"
 echo "Logging to ${LOGDIR}/${LOGFILE}"
 
-cd "@PREFIX@/share/mystonline/data"
-"@PREFIX@/bin/PlasmaClient" "${USERNAME}" "${PASSWORD}" > "${LOGDIR}/${LOGFILE}" 2>&1
+cd "${PREFIX}/share/mystonline/data" || exit 1
+"${PREFIX}/bin/PlasmaClient" "${USERNAME}" "${PASSWORD}" > "${LOGDIR}/${LOGFILE}" 2>&1
