PlasmaClient: detect absence of MOULa data files in wrapper script and advise user how to fix
git-svn-id: https://svn.macports.org/repository/macports/trunk@72006 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -6,6 +6,7 @@ PortGroup                   cmake 1.0
 
 name                        PlasmaClient
 version                     0.0-244
+revision                    1
 categories                  games
 platforms                   darwin
 maintainers                 ryandesign
