--- a/dports/games/PlasmaClient/files/PlasmaClient.in
+++ b/dports/games/PlasmaClient/files/PlasmaClient.in
@@ -5,10 +5,20 @@ if [ -z "$PREFIX" ]; then
     PREFIX="@PREFIX@"
 fi
 
+MOULDATADIR="${PREFIX}/share/mystonline/data"
 LOGDIR="${PREFIX}/var/log/PlasmaClient"
 LOGFILE="PlasmaClient.$(date '+%s').log"
 LOGLINK="PlasmaClient.log"
 PLIST="org.macports.PlasmaClient"
+
+if [ ! -d "${MOULDATADIR}" ]; then
+    osascript \
+        -e 'tell app "Finder"' \
+        -e 'activate' \
+        -e "display dialog \"PlasmaClient needs the Myst Online: URU Live again game data files. Install the “mystonline-cider” port and run the application to let it download all the game data. Then come back to PlasmaClient.\" buttons {\"OK\"} default button \"OK\" with title \"PlasmaClient\" with icon note" \
+        -e 'end'
+    exit
+fi
 
 USERNAME="$(defaults read $PLIST username)"
 PASSWORD="$(defaults read $PLIST password)"
@@ -53,5 +63,5 @@ rm -f "${LOGDIR}/${LOGLINK}"
 ln -s "${LOGFILE}" "${LOGDIR}/${LOGLINK}"
 echo "Logging to ${LOGDIR}/${LOGFILE}"
 
-cd "${PREFIX}/share/mystonline/data" || exit 1
+cd "${MOULDATADIR}"
 "${PREFIX}/bin/PlasmaClient" "${USERNAME}" "${PASSWORD}" > "${LOGDIR}/${LOGFILE}" 2>&1
