Drizzle: no splash screen when started from the command line
git-svn-id: https://svn.macports.org/repository/macports/trunk@72014 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/Drizzle/files/drizzle.in
+++ b/dports/devel/Drizzle/files/drizzle.in
@@ -8,4 +8,5 @@ exec java -Xmx800m \
 -DDrizzle.IsLauncher=false \
 -Dcom.apple.mrj.application.apple.menu.about.name=Drizzle \
 -Xdock:name=Drizzle \
+-splash: \
 -jar "@PREFIX@/share/java/drizzle.jar" "$@"
