--- a/dports/devel/Drizzle/Portfile
+++ b/dports/devel/Drizzle/Portfile
@@ -5,6 +5,7 @@ PortSystem                  1.0
 
 name                        Drizzle
 version                     28
+revision                    1
 categories                  devel
 platforms                   darwin
 maintainers                 ryandesign
