--- a/dports/lang/clisp/Portfile
+++ b/dports/lang/clisp/Portfile
@@ -3,10 +3,9 @@
 PortSystem 1.0
 
 name            clisp
-version         2.48
-revision        1
+version         2.49
 categories      lang
-maintainers     waqar
+maintainers     waqar easieste
 platforms       darwin
 description     The Clisp Common Lisp Implementation
 long_description        \
@@ -24,9 +23,9 @@ homepage        http://clisp.cons.org/
 master_sites    gnu:clisp/release/${version}    \
                 sourceforge
 
-checksums           md5     5e4c4f7cdcf7a1ef4196b9897c287158 \
-                    sha1    dc213ed02194ec4c8b596118c5f92b25d1f540e0 \
-                    rmd160  01c150ebd1e44e627f41de9cdc84b90267185a70
+checksums           md5     1962b99d5e530390ec3829236d168649 \
+                    sha1    7e8d585ef8d0d6349ffe581d1ac08681e6e670d4 \
+                    rmd160  bfb81abf942b07bbb8d83505f287d546b1bbdacc
 
 use_bzip2       yes
 
