Upgrade to sbcl-1.0.42
The SB-POSIX tests patch is no longer included as they have been
addressed upstream, although this has not been tested anywhere other
than x64-darwin-10.4.0, so we leave the patch in repo until we are
sure that we no longer need it.


git-svn-id: https://svn.macports.org/repository/macports/trunk@72017 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/sbcl/Portfile
+++ b/dports/lang/sbcl/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 8; indent-tabs-mode: nil; c-basic-offset: 8 -*- vim:fenc=utf-8:filetype=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name		sbcl
-version		1.0.39
+version		1.0.42
 revision        0
 set subrevision	""
 categories	lang
@@ -22,8 +23,7 @@ homepage	http://www.sbcl.org
 master_sites	sourceforge
 use_bzip2	yes
 
-patchfiles	patch-use-mach-exception-handler.diff \
-                patch-posix-tests.diff
+patchfiles	patch-use-mach-exception-handler.diff 
 		
 distfiles	${name}-${version}-source${subrevision}${extract.suffix}
 
@@ -31,9 +31,9 @@ distname	${name}-${version}-source${subrevision}
 worksrcdir	${name}-${version}
 
 checksums           sbcl-${version}-source.tar.bz2 \
-                    md5     8dcc98ba36bb0197b7bf12f001ff2bb2 \
-                    sha1    027a76d68cf9f9895fea75ba6c7cc055cbd3350d \
-                    rmd160  8cbbd21cd0a0872626ad0e031912eb633f7a8dba \
+                    md5     09cc54b3afc84fe2ce1d5c2af98ea2a2 \
+                    sha1    80cf37e54257d9691d2f1fe22f7bf8969370307e \
+                    rmd160  d198de15a74694368aac4ee234c721da725550dd \
                     sbcl-1.0.30-x86-darwin-binary.tar.bz2 \
                     md5     c15bbff2e7a9083ecd50942edb74cc8c \
                     sha1    069431d0a6e6cfbd7489c3792392926de199a93f \
@@ -81,17 +81,14 @@ platform darwin 10 i386     {
 
 post-patch	{
 	reinplace "s|/usr/local/lib/${name}|${prefix}/lib/${name}|g" \
-                            ${worksrcpath}/src/runtime/runtime.c
-	reinplace "s|/usr/local/lib/${name}|${prefix}/lib/${name}|g" \
                             ${worksrcpath}/doc/sbcl.1
 }
 
 use_configure	no
 
-
 build		{
 	system "ulimit -s 8192"
-	system "unset LD_PREBIND && unset LD_PREBIND_ALLOW_OVERLAP && cd ${worksrcpath} && sh make.sh ${host_lisp}"
+    system "unset LD_PREBIND && unset LD_PREBIND_ALLOW_OVERLAP && cd ${worksrcpath} && sh make.sh  ${host_lisp} --prefix=${prefix}"
 }
 
 post-build {
@@ -113,7 +110,8 @@ test.dir	${worksrcpath}/tests
 test.cmd	sh
 test.target	run-tests.sh
 
-destroot	{ system "cd ${worksrcpath}; INSTALL_ROOT=${destroot}${prefix} sh ${worksrcpath}/install.sh"
+destroot	{ 
+	system "cd ${worksrcpath}; INSTALL_ROOT=${destroot}${prefix} sh ${worksrcpath}/install.sh"
 }
 
 livecheck.url       http://sourceforge.net/api/file/index/project-id/1373/rss?path=%2F${name}
