--- a/dports/gnome/gnome-vfs/Portfile
+++ b/dports/gnome/gnome-vfs/Portfile
@@ -5,8 +5,7 @@ PortSystem      1.0
 PortGroup       muniversal 1.0
 
 name            gnome-vfs
-version         2.24.3
-revision        1
+version         2.24.4
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -22,13 +21,14 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     646a2672c6e7e4ebff6a798b0fb7cc90 \
-                sha1    56aed067eea79175bc186a00003c07a42e5e9aa6 \
-                rmd160  652afba47a33b05128d354927d2648b39b50f35a
+checksums       md5     a05fab03eeef10a47dd156b758982f2e \
+                sha1    0dc634e7dd979fd218f378902c0ca1af80738961 \
+                rmd160  6a5952bea02dfc96782b6f1129fe765f5313a75b
+
+depends_build   port:pkgconfig
 
 depends_lib     port:gconf \
                 port:openssl \
-                port:libidl \
                 port:libxml2
 
 depends_run     port:desktop-file-utils \
@@ -43,6 +43,7 @@ configure.args  --enable-ipv6 \
                 --with-openssl-libs=${prefix}/lib \
                 --with-openssl-includes=${prefix}/include \
                 --disable-gnutls \
+                --disable-fam \
                 ac_cv_func_open64=no \
                 ac_cv_func_posix_fadvise=no \
                 ac_cv_path_KRB5_CONFIG=none
@@ -62,17 +63,8 @@ variant avahi description {Enable Bonjour through avahi} {
     configure.args-delete   --disable-avahi
 }
 post-activate {
-    # We need to register some stuff to gconf. Just putting the
-    # schema files to the right place is not enough.
-    # You can watch the successful installation with gconf-editor.
-
-    system "cd ${prefix}/etc/gconf/schemas && \
-    GCONF_CONFIG_SOURCE=`${prefix}/bin/gconftool-2 --get-default-source` ${prefix}/bin/gconftool-2 --makefile-install-rule \
-        desktop_default_applications.schemas \
-        desktop_gnome_url_handlers.schemas \
-        system_dns_sd.schemas \
-        system_http_proxy.schemas \
-        system_smb.schemas"
+    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+        gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
 livecheck.type  regex
