--- a/dports/gnome/libbonoboui/Portfile
+++ b/dports/gnome/libbonoboui/Portfile
@@ -4,8 +4,7 @@
 PortSystem      1.0
 
 name            libbonoboui
-version         2.24.3
-revision        2
+version         2.24.4
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -24,21 +23,18 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums           md5     3a754b1df0a4d5fd4836a05020a0bb4a \
-                    sha1    917a2ca65307644fe97383b41632148fde9dea4c \
-                    rmd160  69948f05157f4fef76d3bc0d41aaa98ef3c4ea50
+checksums       md5     cc2fb47b79fb3bcc6816ff07d7496cf9 \
+                sha1    290ff87f71b61b629b5caa7ee1a87fb6b3c8aba1 \
+                rmd160  0f949d55e439522db5aa391f429170fb4d9c38f5
 
-depends_build \
-    port:pkgconfig \
-    port:intltool
+depends_build   port:pkgconfig \
+                port:intltool \
+                port:gtk-doc
 
-depends_lib \
-    port:gconf \
-    port:libbonobo \
-    port:libglade2 \
-    port:libgnomecanvas \
-    port:libgnome \
-    port:popt
+depends_lib     port:gconf \
+                port:libbonobo \
+                port:libgnomecanvas \
+                port:libgnome \
 
 configure.args  --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib
