libgnomeui: update to version 2.24.4, dependencies, configuration.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72020 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libgnomeui/Portfile
+++ b/dports/gnome/libgnomeui/Portfile
@@ -4,8 +4,7 @@
 PortSystem      1.0
 
 name            libgnomeui
-version         2.24.3
-revision        1
+version         2.24.4
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -19,18 +18,27 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     ceab6f4370581d1a03c09f15cc103099 \
-                sha1    d2eccc45aa80fba5914612aa0b4d315462cc4d0f \
-                rmd160  3bd7d55e99b88d6469840a9130b4cab13ff4e494
+checksums       md5     f8f68600f26832d3d24b7d7d99d050b9 \
+                sha1    7330304e4f8a386a296dfdebc63459c71255593e \
+                rmd160  de8b949d4a71e4792e49b31ddfd1ecfa2aa04c0d
 
-depends_lib     port:libbonoboui \
-                port:gnome-icon-theme \
-                port:libgnome-keyring
+depends_build   port:pkgconfig \
+                port:intltool \
+                port:gtk-doc
+
+depends_lib     port:gconf \
+                port:libbonoboui \
+                port:libgnome-keyring \
+                port:xorg-libsm
+
+configure.args  --x-includes=${prefix}/include \
+                --x-libraries=${prefix}/lib
 
 variant no_x11 {
-	configure.args-append   --disable-static --enable-shared --without-x
-	configure.env-append  X11_CFLAGS=' ' X11_LIBS=' ' SM_CFLAGS=' ' SM_LIBS=' '
-	patchfiles-append patch-configure.diff
+	depends_lib-delete      port:xorg-libsm
+        configure.args-delete   --x-includes=${prefix}/include \
+                                --x-libraries=${prefix}/lib
+        configure.args-append   --without-x
 }
 
 livecheck.type  regex
