--- a/dports/cross/avr-gdb/Portfile
+++ b/dports/cross/avr-gdb/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			avr-gdb
-version			6.7.1
+version			6.8
 categories		cross
 maintainers		nomaintainer
 description		GDB for the AVR processors
@@ -12,23 +12,27 @@ long_description	avr-gdb is a version of the GNU Debugger that \
 			code for the AVR processors.
 homepage		http://www.gnu.org/software/gdb/gdb.html
 platforms		darwin
-master_sites		http://ftp.gnu.org/gnu/gdb/ \
-			ftp://mirrors.usc.edu/pub/gnu/gdb \
-			ftp://ftp.mcc.ac.uk/pub/gnu/gdb
-distfiles		gdb-${version}.tar.bz2
-worksrcdir		gdb-${version}
+master_sites		gnu:gdb
+distname		gdb-${version}
 use_bzip2		yes
-checksums		md5 30a6bf36eded4ae5a152d7d71b86dc14
+checksums		md5 c9da266b884fb8fa54df786dfaadbc7a \
+                sha1 ba1394d59dd84a1dd3a83322bd82c799596f0bcf \
+                rmd160 23fc9442290b6383ce8f943ef1eb117fa06e79fb
 depends_run		bin:avarice:avarice
 
-# This actually breaks the build process
-#configure.env		CFLAGS="-I${prefix}/include" LDFLAGS="-L${prefix}/lib"
-# without --disable-nls the build process also breaks
+patchfiles	    patch-atmega256x-gdb \
+                patch-gdb::remote.c
+
+# without --disable-nls the build process breaks
 configure.args		--mandir=${prefix}/share/man \
                     --infodir=${prefix}/share/info \
-                    --target=avr --disable-nls
+                    --target=avr --disable-nls \
+                    --disable-werror
 
 post-destroot {
         # Installing (host) libiberty was a mistake.
-        file delete "${destroot}${prefix}/lib/libiberty.a"
+        foreach f [glob -directory "${destroot}${prefix}/lib" libiberty.a */libiberty.a] {
+            file delete $f
+        }
+        file delete "${destroot}${prefix}/share/info/bfd.info"
 }
