giblib: autoreconf to pick up universal support (#26673)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72024 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/giblib/Portfile
+++ b/dports/graphics/giblib/Portfile
@@ -3,6 +3,7 @@
 PortSystem			1.0
 name				giblib
 version				1.2.4
+revision			1
 categories			graphics devel
 platforms			darwin
 maintainers			cs.dartmouth.edu:tristan
@@ -20,6 +21,9 @@ master_sites		http://linuxbrit.co.uk/downloads/
 checksums			md5 c810ef5389baf24882a1caca2954385e
 
 depends_lib			port:imlib2 port:freetype port:zlib
+
+use_autoreconf yes
+autoreconf.args -fvi
 
 # install docs to $prefix/share/doc instead of $prefix/doc
 destroot.args		docsdir=${prefix}/share/doc/${name}
