feh: Don't link against system X11 libs. #26666
git-svn-id: https://svn.macports.org/repository/macports/trunk@72025 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/feh/Portfile
+++ b/dports/graphics/feh/Portfile
@@ -3,7 +3,7 @@
 PortSystem			1.0
 name				feh
 version				1.3.4
-revision            2
+revision			3
 categories			graphics
 maintainers			cs.dartmouth.edu:tristan
 description			Fast lightweight image viewer
@@ -20,7 +20,15 @@ checksums			md5 3d35ba3d2f0693b019800787f1103891
 
 depends_lib			port:giblib port:imlib2 port:jpeg port:libpng port:zlib
 
-configure.args		--mandir=${prefix}/share/man
+use_autoreconf yes
+autoreconf.args -fvi
+
+patch {
+	reinplace "s:/usr/X11R6:${prefix}:g" ${worksrcpath}/configure.ac
+	reinplace "s:/usr/X11R6:${prefix}:g" ${worksrcpath}/configure.in
+	reinplace "s:/usr/X11R6:${prefix}:g" ${worksrcpath}/Makefile.am
+	reinplace "s:/usr/X11R6:${prefix}:g" ${worksrcpath}/src/Makefile.am
+}
 
 destroot.args		docsdir=${prefix}/share/doc/${name}
 
