PlasmaClient: update to 250, fix wrapper script to download SDL and python files using Drizzle, refer users to GoW IRC channel for help
git-svn-id: https://svn.macports.org/repository/macports/trunk@72026 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -5,8 +5,8 @@ PortSystem                  1.0
 PortGroup                   cmake 1.0
 
 name                        PlasmaClient
-version                     0.0-244
-revision                    1
+epoch                       1
+version                     0.0.0-250
 categories                  games
 platforms                   darwin
 maintainers                 ryandesign
@@ -23,7 +23,7 @@ long_description            ${name} is an open-source cross-platform \
 
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/plasmaclient
-hg.tag                      7db98e0ff970
+hg.tag                      f04432964c17
 
 # Decompress these into MO:ULa data dir
 #http://stashbox.org/919902/python.zip
@@ -37,6 +37,8 @@ depends_lib                 port:bullet \
                             port:openssl \
                             port:libsdl \
                             port:libhsplasma
+
+depends_run                 port:Drizzle
 
 if {![file exists ${prefix}/lib/libboost_python-mt.dylib]} {
     depends_lib-delete port:boost
@@ -67,6 +69,7 @@ configure.args              -DBULLET_INCLUDE_DIR:PATH=${prefix}/include/bullet \
 
 post-build {
     reinplace "s|@PREFIX@|${prefix}|g" ${workpath}/PlasmaClient
+    reinplace "s|@APPLICATIONS_DIR@|${applications_dir}|g" ${workpath}/PlasmaClient
 }
 
 destroot.keepdirs           ${destroot}${prefix}/var/log/${name}
@@ -77,6 +80,10 @@ post-destroot {
     
     xinstall -d -m 777 ${destroot}${prefix}/var/log/${name}
 }
+
+notes "
+For assistance with ${name}, please visit the Guild of Writers' IRC channel at irc://irc.guildofwriters.com/#writers
+"
 
 platform darwin powerpc {
     notes-append "\n\n${name} probably does not work at all on PowerPC Macs at this time; try an Intel Mac."
