--- a/dports/net/deluge/Portfile
+++ b/dports/net/deluge/Portfile
@@ -6,6 +6,7 @@ PortGroup       python26 1.0
 
 name            deluge
 version         1.3.0
+revision        1
 categories      net gnome python
 maintainers     devans openmaintainer
 description     A GNOME BitTorrent client.
@@ -16,11 +17,13 @@ platforms       darwin
 
 master_sites    http://download.deluge-torrent.org/source/
 
+dist_subdir     python/${name}/${version}_${revision}
+
 use_bzip2       yes
 
-checksums       md5     d3cdb501983fcf793ee368b5a8e429c0 \
-                sha1    75c1030bbd32c9eebea53c021e19035ebe343c14 \
-                rmd160  28d2162d67684f1969ed5a8882dea358bb022bd2
+checksums       md5     5fca34e2e31753a8ba0ccb942f0e993e \
+                sha1    8acefff67bd82e38314b43887bd5f10da9a12052 \
+                rmd160  dca83b23603a140d4abbb4de7672bf4259018167
 
 depends_lib-append \
                 port:libtorrent-rasterbar \
