--- a/dports/gnome/gtksourceview2/Portfile
+++ b/dports/gnome/gtksourceview2/Portfile
@@ -6,7 +6,7 @@ PortGroup       archcheck 1.0
 
 name		    gtksourceview2
 set my_name     gtksourceview
-version		    2.10.4
+version		    2.10.5
 license         GPL-2 LGPL-2.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers	    gmail.com:micah.lerner openmaintainer
@@ -27,12 +27,13 @@ master_sites    gnome:sources/${my_name}/${branch}/
 distname	    ${my_name}-${version}
 use_bzip2 	    yes
 
-checksums           md5     342666cba9eb2643e5166a0cb58203d2 \
-                    sha1    81365b66909c84fa31df6f11a749afd54ead8772 \
-                    rmd160  909f7cda09cd70d8e0363dc78edb4cae6d5975df
+checksums       md5     1219ad1694df136f126507466aeb41aa \
+                sha1    5081dc7a081954d0af73852c22e874a746bda30e \
+                rmd160  081679debc8ca021749136e952329bb3ea0aa4f2
 
 depends_build   port:intltool \
-	        port:pkgconfig
+	        port:pkgconfig \
+                port:gtk-doc
 
 depends_lib \
     path:lib/pkgconfig/glib-2.0.pc:glib2 \
