totem-pl-parser: update to version 2.30.4.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72042 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/totem-pl-parser/Portfile
+++ b/dports/gnome/totem-pl-parser/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            totem-pl-parser
-version         2.30.3
+version         2.30.4
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      gnome
 maintainers     devans openmaintainer
@@ -17,18 +17,20 @@ homepage        http://live.gnome.org/Totem
 platforms       darwin
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     b5dee2c7755264d335f8ed67d5dd4b39 \
-                sha1    1b13405a14c65de0ba3c338690ee1f9f6e2e6b28 \
-                rmd160  e620afe35a44abd00c6084061198e929ceb24c85
+checksums       md5     eaa98c8829aa51a3e8eae3b43371fd36 \
+                sha1    bfa00c5dc1276939df154cc3b7f769e38b6232fd \
+                rmd160  8bad37682cb0ef46e2391743e340d1ad72eab3d3
 
 use_bzip2       yes
 
 depends_build   port:pkgconfig \
+                port:intltool \
                 port:gtk-doc
 
 depends_lib     port:libsoup \
-                port:gmime \
-                port:gobject-introspection
+                port:gmime
+
+configure.args  --enable-introspection=no
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
