--- a/dports/gnome/yelp/Portfile
+++ b/dports/gnome/yelp/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            yelp
-version         2.30.1
+version         2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Help browser for GNOME.
 long_description Yelp is the default help browser for the \
@@ -18,9 +18,9 @@ supported_archs i386 ppc
 homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     afd638cdaea1fcb9821ece88b819a022 \
-                sha1    941b4c3aecd379ea2ff26d12a37efe32afbf0ab1 \
-                rmd160  a8529e8cbdb021690bcc8a399a1d1b14b0e964ad
+checksums       md5     d745dafd0c134e726511894621d9b050 \
+                sha1    b36d36449ff19844a429b4e2bd5eaad0a7537281 \
+                rmd160  a92fde9f64489c5dee6a249964245b087aab5981
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -58,15 +58,12 @@ variant debug description {Enables debugging} {
 }
 
 post-activate {
-        # We need to register some stuff to gconf. Just putting the
-        # schema files to the right place is not enough.
-        # You can watch the successful installation with gconf-editor.
-
-        system "GCONF_CONFIG_SOURCE=`${prefix}/bin/gconftool-2 --get-default-source` ${prefix}/bin/gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/yelp.schemas"
         system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
         system "${prefix}/bin/scrollkeeper-update; true"
         system "${prefix}/bin/update-desktop-database -q ${prefix}/share/applications; true"
         system "${prefix}/bin/update-mime-database ${prefix}/share/mime; true"
+        system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+            gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
 livecheck.type  regex
