libgdata: update to version 0.6.5.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72047 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libgdata/Portfile
+++ b/dports/gnome/libgdata/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            libgdata
-version         0.6.4
+version         0.6.5
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     libgdata is a GLib-based library for accessing online service APIs using the \
                 GData protocol --- most notably, Google's services.
@@ -21,9 +21,9 @@ master_sites    gnome:sources/${name}/${branch}/
 
 use_bzip2       yes
 
-checksums       md5     7efdef75d1b59177d119f689522d00ba \
-                sha1    b464d798797fa6c9a52ad2dab3cd122702c76294 \
-                rmd160  cfd61e279dc5a6d3afc36bd5c5de9925ab3045d1
+checksums       md5     e12f52a3d25c25016856c64ca0331221 \
+                sha1    d6a78525b15b320086b7483e18bd9be6cb4e9e86 \
+                rmd160  2a10241064e1848406fcf132927fec5594f50996
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -32,7 +32,7 @@ depends_build   port:pkgconfig \
 
 depends_lib     port:libsoup
 
-configure.args  --disable-introspection
+configure.args  --enable-introspection=no
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
