ntfsprogs: add dependency on gettext since -lintl is explicitly added to ldflags (#26690)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72052 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/ntfsprogs/Portfile
+++ b/dports/sysutils/ntfsprogs/Portfile
@@ -29,6 +29,7 @@ configure.args      --disable-gnome-vfs \
 configure.ldflags-append -lintl
 
 depends_build       port:pkgconfig
+depends_lib         port:gettext
 
 variant crypto description {Enable crypto related code and utilities} {
     configure.args-delete   --disable-crypto
