--- a/dports/audio/cmus/Portfile
+++ b/dports/audio/cmus/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			cmus
 version			2.3.3
+revision		1
 distname		${name}-v${version}
 categories		audio
 maintainers		milosh openmaintainer
@@ -25,6 +26,7 @@ universal_variant	no
 build.args		V=2
 configure.pre_args
 configure.args	prefix=${prefix} CONFIG_FLAC=n CONFIG_MIKMOD=n \
+				CONFIG_MODPLUG=n CONFIG_MPC=n CONFIG_FFMPEG=n \
 				CONFIG_AAC=n CONFIG_MP4=n CONFIG_MAD=y CONFIG_VORBIS=y
 
 variant aac  description {Support aac files}   {
@@ -43,6 +45,12 @@ variant mikmod  description {Support mod files} {
 	depends_lib-append    port:libmikmod
 	configure.args-delete CONFIG_MIKMOD=n
 	configure.args-append CONFIG_MIKMOD=y
+}
+
+variant mpc  description {Support musepack files} {
+	depends_lib-append    port:libmpcdec
+	configure.args-delete CONFIG_MPC=n
+	configure.args-append CONFIG_MPC=y
 }
 
 livecheck.type	regex
