pdf2djvu: fix patchfile name; see #26689
git-svn-id: https://svn.macports.org/repository/macports/trunk@72057 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/pdf2djvu/Portfile
+++ b/dports/graphics/pdf2djvu/Portfile
@@ -28,7 +28,7 @@ depends_build       port:pkgconfig port:gsed
 depends_lib         port:djvulibre port:poppler port:libiconv port:GraphicsMagick
 
 patchfiles          patch-configure.diff \
-                    patch-i18n.hh.orig \
+                    patch-i18n.hh.diff \
                     patch-tools-xml2c.diff
 
 configure.universal_args-delete --disable-dependency-tracking
