gnuplot: update to 4.4.2; see #26663
git-svn-id: https://svn.macports.org/repository/macports/trunk@72058 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/gnuplot/Portfile
+++ b/dports/math/gnuplot/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 PortGroup                   xcodeversion 1.0
 
 name                        gnuplot
-version                     4.4.1
+version                     4.4.2
 categories                  math science
 platforms                   darwin
 maintainers                 nomaintainer
@@ -21,16 +21,18 @@ long_description            Gnuplot is a command-driven interactive function \
 
 homepage                    http://gnuplot.sourceforge.net/
 master_sites                sourceforge
-distfiles-append            ${name}-${version}.pdf
+dist_subdir                 ${name}/${version}
+
+distfiles-append            ${name}.pdf
 extract.only                ${distname}.tar.gz
 checksums                   ${distname}.tar.gz \
-                            md5     296e2904363e508bd8cb7e8ea1d267e8 \
-                            sha1    d4ac1d57aaf98b5ed72e754c0b5bf4f38e41d3c0 \
-                            rmd160  260f42ff776cc4173cf912754d6f2e8b8c424ef6 \
-                            ${name}-${version}.pdf \
-                            md5     fcae08dc2dc41ebb1607df82bdb186f0 \
-                            sha1    75e2769d99872f77bf26a94ab115a299f04bc649 \
-                            rmd160  f5dc9ae03d8754c15b0e8e59f7c45badc146f6c1
+                            md5 a4f0dd89f9b9334890464f687ddd9f50 \
+                            sha1 35666be22e877ade5e272199d3d81555c141cef5 \
+                            rmd160 077d6d353e0370d1f8463693380030722f5789af \
+                            ${name}.pdf \
+                            md5 c17775724526429bd53b348d36242e55 \
+                            sha1 fc687fc626d59e2db82b5abc9ea8d8bcff618cbe \
+                            rmd160 22473a6dfabd335c2f2392e856b7757d8e83617c
 
 depends_lib                 port:expat \
                             port:fontconfig \
@@ -96,6 +98,6 @@ destroot.destdir            prefix=${destroot}${prefix}
 
 post-destroot {
     xinstall -d -m 0755 ${destroot}${prefix}/share/doc/${name}
-    xinstall -m 0644 ${distpath}/${name}-${version}.pdf \
+    xinstall -m 0644 ${distpath}/${name}.pdf \
         ${destroot}${prefix}/share/doc/${name}/
 }
