libunique: explicitly disable GObject introspection to avoid opportunistic attempts to generate introspection data when gobject-introspection is installed until introspection is available in dependencies gtk2, pango. Closes #26692.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72059 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libunique/Portfile
+++ b/dports/gnome/libunique/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		libunique
 version		1.1.6
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	Unique is a library for writing single instance applications.
 long_description \
@@ -30,7 +31,8 @@ depends_lib     port:gtk2 \
 
 configure.args  --enable-maintainer-flags=no \
                 --x-includes=${prefix}/include \
-                --x-libraries=${prefix}/lib
+                --x-libraries=${prefix}/lib \
+                --enable-introspection=no
                 
 variant no_x11 {
     depends_lib-delete port:xorg-libX11
