glom: fix dependency names (#14379)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72063 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/glom/Portfile
+++ b/dports/gnome/glom/Portfile
@@ -17,7 +17,7 @@ use_bzip2 	yes
 
 depends_lib	port:bakery port:libgdamm port:libgnomecanvasmm \
 		port:gnome-session port:python24 \
-		port:iso-codes port:pygda port:gtksourceviewmm \
+		port:iso-codes port:gnome-python-extras port:libgtksourceviewmm \
 		port:libiconv port:postgresql81 port:gettext \
 		port:gnome-python-extras
 
