--- a/dports/devel/subversion-python24bindings/Portfile
+++ b/dports/devel/subversion-python24bindings/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			subversion-python24bindings
-version			1.6.9
+version			1.6.13
 categories		devel python
 platforms		darwin
 maintainers		blair
@@ -17,9 +17,10 @@ long_description	Subversion (svn) is a version control system designed to be \
 homepage		http://subversion.tigris.org/
 master_sites		${homepage}/downloads
 use_bzip2		yes
-checksums		md5 9c30a47b1d48664e7afef68bb4834c53 \
-			sha1 477aa89e60de7974ac0aa921cc369b4c2907693c \
-			rmd160 5f085c053657dc8d0048944265dbe436892a94fb
+checksums	md5	7ae1c827689f21cf975804005be30aeb \
+		sha1	185efd129c3c4b04f1544d62bb9a3fcd0f58ba29 \
+		rmd160	1a21227da118eefd705d7208d8fff71f6f90035b
+
 distname		subversion-${version}
 dist_subdir		subversion
 
@@ -47,8 +48,8 @@ configure.args		--with-berkeley-db=:${prefix}/include/db46:${prefix}/lib/db46:db
 
 configure.env		ac_cv_path_PYTHON=${prefix}/bin/python2.4 \
 			ac_cv_python_includes=-I${prefix}/include/python2.4 \
-			ac_cv_python_link="${configure.compiler} -L${prefix}/lib -bundle -undefined dynamic_lookup -lpython2.4" \
-			ac_cv_python_libs="-L${prefix}/lib -bundle -undefined dynamic_lookup -lpython2.4"
+			ac_cv_python_link="${configure.compiler} -L${prefix}/lib -bundle -undefined dynamic_lookup" \
+			ac_cv_python_libs="-L${prefix}/lib -bundle -undefined dynamic_lookup"
 
 use_parallel_build      yes
 build.target		swig-py
