ImageMagick: update to 6.6.4-8; remove gs variant and enable Ghostscript support all the time, so PDFs can always be converted
git-svn-id: https://svn.macports.org/repository/macports/trunk@72069 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/ImageMagick/Portfile
+++ b/dports/graphics/ImageMagick/Portfile
@@ -6,7 +6,7 @@ PortGroup                   archcheck 1.0
 
 name                        ImageMagick
 conflicts                   cryptlib
-version                     6.6.4-0
+version                     6.6.4-8
 set reasonable_version      [lindex [split ${version} -] 0]
 homepage                    http://www.imagemagick.org/
 categories                  graphics devel
@@ -40,9 +40,9 @@ master_sites                http://image_magick.veidrodis.com/image_magick/ \
 #                            http://ftp.surfnet.nl/pub/ImageMagick/
 #                            ftp://ftp.nluug.nl/pub/${name}/
 
-checksums                   md5     7647b6f6c950ed5d1b9d16246c1fab05 \
-                            sha1    83168c5bb2a71dff658d5dc3a9d3ca7a72b80287 \
-                            rmd160  c4176a8f59f6645e1c0d33ebeabec77bda180317
+checksums                   md5     657221610f5ae134b71b422e9d4a7e44 \
+                            sha1    ee7d4e75c2eddf25ada07468d72c2a264c73bb1c \
+                            rmd160  c033347fd438858f1d17d6bd6b284474bf16e9f3
 
 patchfiles                  patch-m4_ax_opencl.m4.diff
 
@@ -58,6 +58,7 @@ depends_lib                 port:xorg-libXext \
                             port:zlib \
                             port:freetype \
                             port:fontconfig \
+                            port:ghostscript \
                             port:libiconv \
                             port:expat \
                             port:libxml2
@@ -71,6 +72,7 @@ archcheck.files             lib/libXext.dylib \
                             lib/libtiff.dylib \
                             lib/libfreetype.dylib \
                             lib/libfontconfig.dylib \
+                            lib/libgs.dylib \
                             lib/libiconv.dylib \
                             lib/libexpat.dylib \
                             lib/libxml2.dylib
@@ -94,6 +96,7 @@ configure.args              --enable-shared \
                             --with-dps \
                             --with-bzlib \
                             --with-fontconfig \
+                            --with-gslib \
                             --with-jpeg \
                             --with-lcms \
                             --with-png \
@@ -104,7 +107,6 @@ configure.args              --enable-shared \
                             --with-x \
                             --without-perl \
                             --without-fpx \
-                            --without-gslib \
                             --without-jbig \
                             --without-jp2 \
                             --without-wmf \
@@ -130,13 +132,6 @@ variant graphviz description {Support Graphviz} {
     archcheck.files-append  lib/libgvc.dylib
     configure.args-delete   --without-gvc
     configure.args-append   --with-gvc
-}
-
-variant gs description {Include Ghostscript library support} {
-    depends_lib-append      port:ghostscript
-    archcheck.files-append  lib/libgs.dylib
-    configure.args-delete   --without-gslib
-    configure.args-append   --with-gslib
 }
 
 variant hdri description {Support High Dynamic Range Imaging using OpenEXR} {
