--- a/dports/lang/vala/Portfile
+++ b/dports/lang/vala/Portfile
@@ -1,9 +1,12 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 
 name                vala
 version             0.10.0
+revision            1
+set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          lang
 maintainers         nomaintainer
 description         Compiler for the GObject type system
@@ -16,12 +19,20 @@ long_description \
 platforms           darwin
 
 homepage            http://live.gnome.org/Vala
-master_sites        gnome:sources/${name}/[strsed ${version} {/\.[0-9]*$//}]
+master_sites        gnome:sources/${name}/${branch}/
 use_bzip2           yes
 
 checksums           md5     1e38cdc951d2b43e49084a6d5ad19e9d \
                     sha1    62dc98ad4d0457fd6407881941c326af1542dea1 \
                     rmd160  90fe6e297ab4889524631ad21a477f9c497e0d26
 
-depends_build       path:bin/pkg-config:pkgconfig
+depends_build       path:bin/pkg-config:pkgconfig \
+                    port:libxslt
+
 depends_lib         path:lib/pkgconfig/glib-2.0.pc:glib2
+
+configure.args      --enable-vapigen
+
+livecheck.type      regex
+livecheck.url       http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
+livecheck.regex     {LATEST-IS-(\d+(?:\.\d+)*)}
