libgee: update to version 0.6.0, enable GObject introspection, mode line, livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72071 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libgee/Portfile
+++ b/dports/devel/libgee/Portfile
@@ -1,15 +1,17 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
+
 name                libgee
-version             0.5.3
+version             0.6.0
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          devel
 maintainers         nomaintainer
 description         Collection library providing GObject-based interfaces
-long_description \
-   Libgee is a collection library providing GObject-based interfaces and \
-   classes for commonly used data structures. 
+
+long_description    Libgee is a collection library providing GObject-based interfaces and \
+                    classes for commonly used data structures.
 
 platforms           darwin
 
@@ -17,9 +19,18 @@ homepage            http://live.gnome.org/Libgee
 master_sites        gnome:sources/${name}/${branch}
 use_bzip2           yes
 
-checksums           md5     1be8ea04c2e2159a45aea9fae1b688dc \
-                    sha1    66284450fc14cf8b5fb8adec320027bf31cb5539 \
-                    rmd160  1be9554f6e38d6197973265ef5e496a3dc007565
+checksums           md5     4eb513b23ab6ea78884989518a4acf6f \
+                    sha1    37127eacecfc1090f0f91b8350a6b2456580a318 \
+                    rmd160  8cd55171fc2c8392b0cd5b1fb8cf56750a22b25a
 
-depends_build       port:vala port:pkgconfig
-depends_lib         path:lib/pkgconfig/glib-2.0.pc:glib2
+depends_build       port:pkgconfig \
+                    port:vala
+
+depends_lib         port:gobject-introspection
+
+configure.args      --enable-introspection=yes
+
+livecheck.type      regex
+livecheck.url       http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
+livecheck.regex     {LATEST-IS-(\d+(?:\.\d+)*)}
+
