PlasmaClient: update to 0.0.1-270
git-svn-id: https://svn.macports.org/repository/macports/trunk@72072 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -6,7 +6,7 @@ PortGroup                   cmake 1.0
 
 name                        PlasmaClient
 epoch                       1
-version                     0.0.0-258
+version                     0.0.1-270
 categories                  games
 platforms                   darwin
 maintainers                 ryandesign
@@ -23,7 +23,7 @@ long_description            ${name} is an open-source cross-platform \
 
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/plasmaclient
-hg.tag                      6da52642b2c3
+hg.tag                      1a917fae0724
 
 depends_lib                 port:bullet \
                             port:python26 \
@@ -53,8 +53,11 @@ if {![file exists ${prefix}/lib/libboost_python-mt.dylib]} {
 }
 
 post-extract {
+    reinplace "s|\r||g" ${worksrcpath}/win32dist/readme.rtf
     copy ${filespath}/PlasmaClient.in ${workpath}/PlasmaClient
 }
+
+patchfiles                  patch-win32dist-readme.rtf.diff
 
 configure.args              -DBULLET_INCLUDE_DIR:PATH=${prefix}/include/bullet \
                             -DCMAKE_VERBOSE_MAKEFILE:BOOL=TRUE \
@@ -70,15 +73,21 @@ post-build {
 
 destroot.keepdirs           ${destroot}${prefix}/var/log/${name}
 
+set docdir ${prefix}/share/doc/${name}
 post-destroot {
     xinstall -d ${destroot}${applications_dir}/PlasmaClient.app/Contents/MacOS
     xinstall ${workpath}/PlasmaClient ${destroot}${applications_dir}/PlasmaClient.app/Contents/MacOS
+    
+    xinstall -d ${destroot}${docdir}
+    xinstall -W ${worksrcpath}/win32dist readme.rtf gpl.txt ${destroot}${docdir}
     
     xinstall -d -m 777 ${destroot}${prefix}/var/log/${name}
 }
 
 notes "
-For assistance with ${name}, please visit the Guild of Writers' IRC channel at irc://irc.guildofwriters.com/#writers
+Instructions for using ${name} are in the file ${docdir}/readme.rtf.
+
+For more information, please visit the Guild of Writers' IRC channel at irc://irc.guildofwriters.com/#writers
 "
 
 platform darwin powerpc {
