--- a/dports/aqua/TeXShop/Portfile
+++ b/dports/aqua/TeXShop/Portfile
@@ -6,6 +6,7 @@ PortGroup       xcode 1.0
 
 name            TeXShop
 version         2.37
+revision        1
 categories      aqua editors
 license         GPLv2+
 maintainers     snc openmaintainer
@@ -20,11 +21,11 @@ homepage        http://www.uoregon.edu/~koch/texshop/texshop.html
 master_sites    http://www.uoregon.edu/~koch/texshop
 use_zip         yes
 distname        texshopsource
-dist_subdir     ${name}/${version}
+dist_subdir     ${name}/${version}_${revision}
 worksrcdir      texshopsource
 
-checksums           sha1    1472dc9be25c586f8069ebbe3a1c9dd1b1a30aa7 \
-                    rmd160  e353a5c3213c2a8727a26f3f4664452db91907e0
+checksums           sha1    7f3719b3344abcaf81d77ed0ea2e410bb569c015 \
+                    rmd160  39cd942a06c75eeeddd18451a4e8b4d1786d4e8a
 
 # force 32-bit, ticket #20291
 supported_archs i386 ppc
