py26-mpi4py upgrade plus new variant; closes #26679
git-svn-id: https://svn.macports.org/repository/macports/trunk@72074 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-mpi4py/Portfile
+++ b/dports/python/py26-mpi4py/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 PortGroup       python26 1.0
 
 name            py26-mpi4py
-version         1.2
+version         1.2.2
 categories      python
 description     MPI for Python - Python bindings for MPI
 long_description \
@@ -25,8 +25,9 @@ maintainers     adfernandes openmaintainer
 homepage        http://code.google.com/p/mpi4py/
 master_sites    googlecode:mpi4py
 distname        mpi4py-${version}
-checksums       sha1    6dcef2758abce46c8e0b55a531d7164b8fed8931
-
+checksums       md5     91c1b962529adfd90b9f9f98db5624b7 \
+                sha1    e08d09257794a85d010a22ad9bda9d1c89a6258f \
+                rmd160  434d411aa4e954706f2ca8bdde115dc654b58f21
 platforms       darwin
 
 if { ${os.major} < 9 } {
@@ -40,4 +41,8 @@ if {  ${os.major} < 9 &&  ![variant_isset openmpi] } {
 variant openmpi description {builds with the openmpi port} {
     depends_lib-append  port:openmpi
     build.target        build "--mpicc=${prefix}/bin/openmpicc"
+}
+
+variant interpreter description {builds an mpi enabled python interpreter} {
+    patchfiles-append   patch-conf-mpidistutils.py.diff
 }
