--- a/dports/devel/caml-batteries/Portfile
+++ b/dports/devel/caml-batteries/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem          1.0
 name                caml-batteries
-version             20090405
+version             20bc31e5d00319a48ccc88cd4f13b4eb2c30fef2
 categories          devel ml
 maintainers         erickt openmaintainer
 description         A new O'Caml standard library
@@ -12,14 +12,11 @@ long_description    OCaml Batteries included (or simply Batteries) is a \
                     OCaml programming language.
 homepage            http://batteries.forge.ocamlcore.org/
 platforms           darwin
-master_sites        http://forge.ocamlcore.org/frs/download.php/199
+master_sites        http://forge.ocamlcore.org/frs/download.php/366
 
-distfiles           batteries-${version}.tar.gz
-worksrcdir          batteries-${version}
-
-checksums           md5     4cdd4c6885a2213c6d9aff6b1e4b1da7 \
-                    sha1    e5fdc8940d73296cadcae5a4d10d61f7ebf5e566 \
-                    rmd160  cfda79b2ce4d8980e8bb553efbd972d5da402dc4
+fetch.type          git
+git.url             git://github.com/ocaml-batteries-team/batteries-included.git
+git.branch          ${version}
 
 depends_lib         port:ocaml \
                     port:caml-findlib \
@@ -31,10 +28,7 @@ depends_lib         port:ocaml \
                     port:caml-ocamlnet \
                     port:caml-ounit
 
-configure.pre_args
-configure.args      --with-docroot=${prefix}/share/doc/caml-batteries
-build.target        all opt top syntax
-use_parallel_build  no
+use_configure       no
 
 set ocamlfind_destdir ${destroot}${prefix}/lib/ocaml/site-lib
 
@@ -46,7 +40,7 @@ pre-destroot {
 }
 
 livecheck.type      regex
-livecheck.regex     "bin-prot-release-(.*?).tar.gz"
+livecheck.regex     "batteries-(.*?).tar.gz"
 
 variant doc description {Install documentation} {
     build.target-append doc
